Applied open rewrite recipes