@@ -56,7 +56,7 @@ public class SQLSubQueryTest {
             .from(employee);
     List<? extends Expression<?>> exprs =
         ((FactoryExpression) subQuery.getMetadata().getProjection()).getArgs();
-    assertThat(exprs.get(0)).isEqualTo(employee.id);
+    assertThat(exprs.getFirst()).isEqualTo(employee.id);
     assertThat(exprs.get(1)).isEqualTo(ConstantImpl.create("XXX"));
     assertThat(exprs.get(2)).isEqualTo(employee.firstname);
   }
@@ -74,12 +74,14 @@ public class SQLSubQueryTest {
 
     assertThat(serializer.toString())
         .isEqualTo(
-            "(select EMPLOYEE.ID, EMPLOYEE.FIRSTNAME, EMPLOYEE.LASTNAME, EMPLOYEE.SALARY,"
-                + " EMPLOYEE.DATEFIELD, EMPLOYEE.TIMEFIELD, EMPLOYEE.SUPERIOR_ID, employee2.ID as"
-                + " col__ID7\n"
-                + "from EMPLOYEE EMPLOYEE\n"
-                + "inner join EMPLOYEE employee2\n"
-                + "on EMPLOYEE.SUPERIOR_ID = employee2.ID)");
+            """
+            (select EMPLOYEE.ID, EMPLOYEE.FIRSTNAME, EMPLOYEE.LASTNAME, EMPLOYEE.SALARY,\
+             EMPLOYEE.DATEFIELD, EMPLOYEE.TIMEFIELD, EMPLOYEE.SUPERIOR_ID, employee2.ID as\
+             col__ID7
+            from EMPLOYEE EMPLOYEE
+            inner join EMPLOYEE employee2
+            on EMPLOYEE.SUPERIOR_ID = employee2.ID)\
+            """);
   }
 
   @Test
@@ -112,7 +114,7 @@ public class SQLSubQueryTest {
             .from(employee);
     List<? extends Expression<?>> exprs =
         ((FactoryExpression) subQuery.getMetadata().getProjection()).getArgs();
-    assertThat(exprs.get(0)).isEqualTo(employee.id);
+    assertThat(exprs.getFirst()).isEqualTo(employee.id);
     assertThat(exprs.get(1)).isEqualTo(ConstantImpl.create("XXX"));
     assertThat(exprs.get(2)).isEqualTo(employee.firstname);
   }
@@ -184,12 +186,14 @@ public class SQLSubQueryTest {
 
     assertThat(query.toString())
         .isEqualTo(
-            "with survey1 as (select survey1.NAME, survey1.NAME2, survey1.ID\n"
-                + "from SURVEY survey1)\n"
-                + "(select survey2.NAME, survey2.NAME2, survey2.ID\n"
-                + "from SURVEY survey2)\n"
-                + "union\n"
-                + "(select survey3.NAME, survey3.NAME2, survey3.ID\n"
-                + "from SURVEY survey3)");
+            """
+            with survey1 as (select survey1.NAME, survey1.NAME2, survey1.ID
+            from SURVEY survey1)
+            (select survey2.NAME, survey2.NAME2, survey2.ID
+            from SURVEY survey2)
+            union
+            (select survey3.NAME, survey3.NAME2, survey3.ID
+            from SURVEY survey3)\
+            """);
   }
 }
