@@ -228,7 +228,7 @@ public abstract class UnionBase extends AbstractBaseTest {
 
     List<Tuple> list = query().union(sq1, sq2).fetch().collectList().block();
     assertThat(list).hasSize(2);
-    assertThat(list.get(0) != null).isTrue();
+    assertThat(list.getFirst() != null).isTrue();
     assertThat(list.get(1) != null).isTrue();
   }
 
@@ -256,7 +256,7 @@ public abstract class UnionBase extends AbstractBaseTest {
 
     List<Integer> list = query().union(sq1, sq2).fetch().collectList().block();
     assertThat(list).hasSize(2);
-    assertThat(list.get(0) != null).isTrue();
+    assertThat(list.getFirst() != null).isTrue();
     assertThat(list.get(1) != null).isTrue();
   }
 
